--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,8 +3,9 @@
       package="com.example.hellojni"
       android:versionCode="1"
       android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="3" android:targetSdkVersion="14"/>
-    <application android:label="@string/app_name">
+    <uses-sdk android:minSdkVersion="3" />
+    <application android:label="@string/app_name"
+                 android:debuggable="true">
         <activity android:name=".HelloJni"
                   android:label="@string/app_name">
             <intent-filter>
